fixed overflowing about section

--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,7 @@ body {
 	background: #000;
 	color: #fff;
 	width: 100%;
+	overflow-x: hidden;
 	line-height: 1.6;
 }
 
@@ -76,10 +77,6 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-.description {
-	padding-left: 20px;
 }
 
 @media only screen and (max-width: 768px) {
