--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,51 +1,51 @@
 @font-face {
-	font-family: 'Radon';
-	  src: url('../fonts/Radon_Regular/Radon_Regular.eot'); /* IE9 Compat Modes */
-	  src: url('../fonts/Radon_Regular/Radon_Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-		  url('../fonts/Radon_Regular/Radon_Regular.woff2') format('woff2'), /* Super Modern Browsers */
-		  url('../fonts/Radon_Regular/Radon_Regular.woff') format('woff'), /* Pretty Modern Browsers */
-		  url('../fonts/Radon_Regular/Radon_Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-		  url('../fonts//Radon_Regular.svg#svgFontName') format('svg'); /* Legacy iOS */ 
-	  font-weight: 400;
-	  font-style: normal;
-  }
+	font-family: "Radon";
+	src: url("../fonts/Radon_Regular/Radon_Regular.eot"); /* IE9 Compat Modes */
+	src: url("../fonts/Radon_Regular/Radon_Regular.eot?#iefix") format("embedded-opentype"),
+		/* IE6-IE8 */ url("../fonts/Radon_Regular/Radon_Regular.woff2") format("woff2"),
+		/* Super Modern Browsers */ url("../fonts/Radon_Regular/Radon_Regular.woff") format("woff"),
+		/* Pretty Modern Browsers */ url("../fonts/Radon_Regular/Radon_Regular.ttf") format("truetype"),
+		/* Safari, Android, iOS */ url("../fonts//Radon_Regular.svg#svgFontName") format("svg"); /* Legacy iOS */
+	font-weight: 400;
+	font-style: normal;
+}
 @font-face {
-	font-family: 'Radon_better';
-	  src: url('../fonts/Radon_Deco/Radon_Deco.eot'); /* IE9 Compat Modes */
-	  src: url('../fonts/Radon_Deco/Radon_Deco.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-		  url('../fonts/Radon_Deco/Radon_Deco.woff2') format('woff2'), /* Super Modern Browsers */
-		  url('../fonts/Radon_Deco/Radon_Deco.woff') format('woff'), /* Pretty Modern Browsers */
-		  url('../fonts/Radon_Deco/Radon_Deco.ttf')  format('truetype'), /* Safari, Android, iOS */
-		  url('../fonts/Radon_Deco/Radon_Deco.svg#svgFontName') format('svg'); /* Legacy iOS */ 
-	  font-weight: 400;
-	  font-style: normal;
-  }
+	font-family: "Radon_better";
+	src: url("../fonts/Radon_Deco/Radon_Deco.eot"); /* IE9 Compat Modes */
+	src: url("../fonts/Radon_Deco/Radon_Deco.eot?#iefix") format("embedded-opentype"),
+		/* IE6-IE8 */ url("../fonts/Radon_Deco/Radon_Deco.woff2") format("woff2"),
+		/* Super Modern Browsers */ url("../fonts/Radon_Deco/Radon_Deco.woff") format("woff"),
+		/* Pretty Modern Browsers */ url("../fonts/Radon_Deco/Radon_Deco.ttf") format("truetype"),
+		/* Safari, Android, iOS */ url("../fonts/Radon_Deco/Radon_Deco.svg#svgFontName") format("svg"); /* Legacy iOS */
+	font-weight: 400;
+	font-style: normal;
+}
 
 section {
-    height: 100vh;
+	height: 100vh;
 	width: 100%;
 	border-bottom: 5px solid #ff233b;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .sec_heading {
-	font-family: 'Radon';
+	font-family: "Radon";
 	text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    min-width: fit-content;
-    width: 15%;
-    height: 8%;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin-bottom: 2rem;
-    background: #ff233b;
-    color: black;
-    font-size: 2rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
+	min-width: fit-content;
+	width: 15%;
+	height: 8%;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	margin-bottom: 2rem;
+	background: #ff233b;
+	color: black;
+	font-size: 2rem;
 }
 
 .sec_container {
@@ -53,7 +53,7 @@ section {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-    height: 80%;
+	height: 80%;
 }
 
 section#Home {
@@ -67,7 +67,7 @@ section#Home .topsection {
 	justify-content: center;
 	align-items: center;
 	height: 60%;
-    width: 100%;
+	width: 100%;
 }
 
 section#Home .topsection .logo {
@@ -95,25 +95,13 @@ section#Home .topsection .logo img {
 }
 
 section#Home .name {
-      font-family: 'Radon';
-    margin-top: 3rem;
-    font-size: 3rem;
-    text-align: center;
-    max-width: 100%;
-}
-section#Competition {
-    height: fit-content;
+	font-family: "Radon";
+	margin-top: 3rem;
+	font-size: 3rem;
+	text-align: center;
+	max-width: 100%;
 }
 
-section#Competition .f1text {
-	font-family:Arial, Helvetica, sans-serif; 
-	width: 75%;
-    max-height: fit-content;
-    word-wrap: normal;
-	text-align: center;
-	text-justify: inter-word;
-	margin-bottom: 2rem;
-}
 section#TheTeam {
 	height: fit-content;
 }
@@ -121,30 +109,47 @@ section#TheTeam .sec_container {
 	margin-bottom: 2rem;
 }
 section#TheTeam .images {
-	width: 45%;
+	width: 90%;
+	min-height: 200px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 }
-section#About Us {
+section#AboutUs {
 	height: fit-content;
 }
-section#About Us .sec_container {
+section#AboutUs .sec_container {
 	margin-bottom: 2rem;
 }
-section#About Us .sec_container .description{
-	font-family:Arial, Helvetica, sans-serif; 
+section#AboutUs .sec_container .description {
+	font-family: Arial, Helvetica, sans-serif;
 	width: 90%;
-    max-height: fit-content;
-  	word-wrap: normal;
+	max-height: fit-content;
+	word-wrap: normal;
 	text-align: center;
 	text-justify: inter-word;
 	margin-bottom: 2rem;
 }
 
-section#About p {
-    margin-bottom: 4rem;
+section#AboutUs p {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 }
+
+section#Competition {
+	height: fit-content;
+}
+
+section#Competition .f1text {
+	font-family: Arial, Helvetica, sans-serif;
+	width: 90%;
+	max-height: fit-content;
+	word-wrap: normal;
+	text-align: center;
+	text-justify: inter-word;
+	margin-bottom: 2rem;
+}
+
 section#Contact {
 	height: fit-content;
 }
@@ -152,24 +157,24 @@ section#Contact {
 section#Contact a {
 	margin-top: 2rem;
 	margin-bottom: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 section#Contact img {
 	width: 80%;
-    max-width: 200px;
-    margin-left: 1rem;
+	max-width: 200px;
+	margin-left: 1rem;
 }
 
 @media only screen and (max-width: 768px) {
-  .sec_heading{
-    font-weight: 900;
-  }
+	.sec_heading {
+		font-weight: 900;
+	}
 	section#Home {
 		justify-content: flex-start;
 		/* fallback */
-		height: 120vh; 
+		height: 120vh;
 
 		height: fit-content;
 	}
@@ -178,17 +183,17 @@ section#Contact img {
 		margin-bottom: 1rem;
 	}
 	section#Home .topsection {
-        width: 100%;
-        height: 65%;
+		width: 100%;
+		height: 65%;
 		margin-top: 2rem;
 		flex-direction: column;
 		align-items: center;
 	}
 	section#Home .topsection .logo {
-        height: 40%;
+		height: 40%;
 		max-height: 250px;
 		width: 80%;
-        align-items: center;
+		align-items: center;
 		margin-right: 1rem;
 	}
 	section#Home .topsection .logo img {
@@ -197,44 +202,14 @@ section#Contact img {
 		max-height: inherit;
 	}
 	section#Home .topsection .map {
-        height: 60%;
-        width: 80%;
+		height: 60%;
+		width: 80%;
 		max-height: 300px;
 		margin-top: 1rem;
 		margin-left: 0;
-        align-items: center;
-	}	
-    section#Competition .f1text {
-        font-size: 0.8rem;
-    }
-}
-  section#About Us{
-	  height: fit-content;
-  }
-  section#About Us .sec_container{
-    display: flex;
-    flex-direction: collum;
-	  margin-bottom: 2rem;
-}
-  section#About Us .sec_container .text1{
-    flex-direction: column;
-	  font-family:Arial, Helvetica, sans-serif; 
-}
-  section#About Us .sec_contianer .text2{
-    flex-direction: column;
-    font-family:Arial, Helvetica, sans-serif; 
-    padding-top: 4rem;
-  }
-	section#TheTeam .sec_container {
-		flex-direction: column;
 		align-items: center;
-		margin-bottom: 1rem;
 	}
-  	section#TheTeam .images {
-		width: 90%;
-		margin-bottom: 3rem;
-		padding: 0;
-	}
+}
 
 @media only screen and (max-width: 300px) {
 	* {
